Fixed 3d model alignment issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,3 +20,7 @@
   height: 92vh;
   overflow: auto;
 }
+
+.stopOverflow {
+  overflow: hidden;
+}
